--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -5,8 +5,8 @@ xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
  <servlet>
-  <description>Hello World Service</description>
-  <servlet-name>HelloWorldServlet</servlet-name>
+  <description>Project Controlling System</description>
+  <servlet-name>ProjectControllingSystemServlet</servlet-name>
   <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
   <init-param>
    <param-name>com.sun.jersey.config.property.packages</param-name>
@@ -23,7 +23,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <load-on-startup>1</load-on-startup>
  </servlet>
  <servlet-mapping>
-  <servlet-name>HelloWorldServlet</servlet-name>
+  <servlet-name>ProjectControllingSystemServlet</servlet-name>
   <url-pattern>/api/*</url-pattern>
  </servlet-mapping>
  
